syntax = "proto3";

option csharp_namespace = "GrpcServer";

package greet;

service Greeter {  
  rpc GetMultiplacationResult(MultiplicationRequest) returns (stream ServiceResult);
}

message MultiplicationRequest {
  int32 number = 1;
}

// The response message containing the greetings.
message ServiceResult {
  string message = 1;
}